1.12.0/_sources/reference/dipy.nn.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`nn`
=========
.. automodule:: dipy.nn

.. currentmodule:: dipy.nn
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf`
--------------------
.. automodule:: dipy.nn.tf

.. currentmodule:: dipy.nn.tf
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.cnn_1d_denoising`
-------------------------------------
.. automodule:: dipy.nn.tf.cnn_1d_denoising

.. currentmodule:: dipy.nn.tf.cnn_1d_denoising
.. autosummary::

   Cnn1DDenoiser


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.deepn4`
---------------------------
.. automodule:: dipy.nn.tf.deepn4

.. currentmodule:: dipy.nn.tf.deepn4
.. autosummary::

   EncoderBlock
   DecoderBlock
   DeepN4
   UNet3D


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.evac`
-------------------------
.. automodule:: dipy.nn.tf.evac

.. currentmodule:: dipy.nn.tf.evac
.. autosummary::

   Block
   ChannelSum
   EVACPlus
   prepare_img
   init_model


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.histo_resdnn`
---------------------------------
.. automodule:: dipy.nn.tf.histo_resdnn

.. currentmodule:: dipy.nn.tf.histo_resdnn
.. autosummary::

   HistoResDNN


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.model`
--------------------------
.. automodule:: dipy.nn.tf.model

.. currentmodule:: dipy.nn.tf.model
.. autosummary::

   SingleLayerPerceptron
   MultipleLayerPercepton


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.tf.synb0`
--------------------------
.. automodule:: dipy.nn.tf.synb0

.. currentmodule:: dipy.nn.tf.synb0
.. autosummary::

   EncoderBlock
   DecoderBlock
   Synb0
   UNet3D


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.torch`
-----------------------
.. automodule:: dipy.nn.torch

.. currentmodule:: dipy.nn.torch
.. autosummary::



.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.torch.deepn4`
------------------------------
.. automodule:: dipy.nn.torch.deepn4

.. currentmodule:: dipy.nn.torch.deepn4
.. autosummary::

   UNet3D
   DeepN4


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.torch.evac`
----------------------------
.. automodule:: dipy.nn.torch.evac

.. currentmodule:: dipy.nn.torch.evac
.. autosummary::

   MoveDimLayer
   ChannelSum
   Add
   Block
   Model
   EVACPlus
   prepare_img


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.torch.histo_resdnn`
------------------------------------
.. automodule:: dipy.nn.torch.histo_resdnn

.. currentmodule:: dipy.nn.torch.histo_resdnn
.. autosummary::

   DenseModel
   HistoResDNN


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.torch.synthseg`
--------------------------------
.. automodule:: dipy.nn.torch.synthseg

.. currentmodule:: dipy.nn.torch.synthseg
.. autosummary::

   Conv3dELU
   Block
   Model
   SynthSeg


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`nn.utils`
-----------------------
.. automodule:: dipy.nn.utils

.. currentmodule:: dipy.nn.utils
.. autosummary::

   normalize
   unnormalize
   get_bounds
   transform_img
   recover_img
   pad_crop
   inv_pad_crop



.. currentmodule:: dipy.nn


.. currentmodule:: dipy.nn.tf


.. currentmodule:: dipy.nn.tf.cnn_1d_denoising


:class:`Cnn1DDenoiser`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Cnn1DDenoiser
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.tf.deepn4


:class:`EncoderBlock`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EncoderBlock
  :members:
  :show-inheritance:


:class:`DecoderBlock`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DecoderBlock
  :members:
  :show-inheritance:


:class:`DeepN4`
~~~~~~~~~~~~~~~


.. autoclass:: DeepN4
  :members:
  :show-inheritance:

UNet3D
~~~~~~

.. autofunction:: UNet3D



.. currentmodule:: dipy.nn.tf.evac


:class:`Block`
~~~~~~~~~~~~~~


.. autoclass:: Block
  :members:
  :show-inheritance:


:class:`ChannelSum`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ChannelSum
  :members:
  :show-inheritance:


:class:`EVACPlus`
~~~~~~~~~~~~~~~~~


.. autoclass:: EVACPlus
  :members:
  :show-inheritance:

prepare_img
~~~~~~~~~~~

.. autofunction:: prepare_img


init_model
~~~~~~~~~~

.. autofunction:: init_model



.. currentmodule:: dipy.nn.tf.histo_resdnn


:class:`HistoResDNN`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HistoResDNN
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.tf.model


:class:`SingleLayerPerceptron`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SingleLayerPerceptron
  :members:
  :show-inheritance:


:class:`MultipleLayerPercepton`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MultipleLayerPercepton
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.tf.synb0


:class:`EncoderBlock`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EncoderBlock
  :members:
  :show-inheritance:


:class:`DecoderBlock`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DecoderBlock
  :members:
  :show-inheritance:


:class:`Synb0`
~~~~~~~~~~~~~~


.. autoclass:: Synb0
  :members:
  :show-inheritance:

UNet3D
~~~~~~

.. autofunction:: UNet3D



.. currentmodule:: dipy.nn.torch


.. currentmodule:: dipy.nn.torch.deepn4


:class:`UNet3D`
~~~~~~~~~~~~~~~


.. autoclass:: UNet3D
  :members:
  :show-inheritance:


:class:`DeepN4`
~~~~~~~~~~~~~~~


.. autoclass:: DeepN4
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.torch.evac


:class:`MoveDimLayer`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MoveDimLayer
  :members:
  :show-inheritance:


:class:`ChannelSum`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ChannelSum
  :members:
  :show-inheritance:


:class:`Add`
~~~~~~~~~~~~


.. autoclass:: Add
  :members:
  :show-inheritance:


:class:`Block`
~~~~~~~~~~~~~~


.. autoclass:: Block
  :members:
  :show-inheritance:


:class:`Model`
~~~~~~~~~~~~~~


.. autoclass:: Model
  :members:
  :show-inheritance:


:class:`EVACPlus`
~~~~~~~~~~~~~~~~~


.. autoclass:: EVACPlus
  :members:
  :show-inheritance:

prepare_img
~~~~~~~~~~~

.. autofunction:: prepare_img



.. currentmodule:: dipy.nn.torch.histo_resdnn


:class:`DenseModel`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: DenseModel
  :members:
  :show-inheritance:


:class:`HistoResDNN`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HistoResDNN
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.torch.synthseg


:class:`Conv3dELU`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Conv3dELU
  :members:
  :show-inheritance:


:class:`Block`
~~~~~~~~~~~~~~


.. autoclass:: Block
  :members:
  :show-inheritance:


:class:`Model`
~~~~~~~~~~~~~~


.. autoclass:: Model
  :members:
  :show-inheritance:


:class:`SynthSeg`
~~~~~~~~~~~~~~~~~


.. autoclass:: SynthSeg
  :members:
  :show-inheritance:


.. currentmodule:: dipy.nn.utils

normalize
~~~~~~~~~

.. autofunction:: normalize


unnormalize
~~~~~~~~~~~

.. autofunction:: unnormalize


get_bounds
~~~~~~~~~~

.. autofunction:: get_bounds


transform_img
~~~~~~~~~~~~~

.. autofunction:: transform_img


recover_img
~~~~~~~~~~~

.. autofunction:: recover_img


pad_crop
~~~~~~~~

.. autofunction:: pad_crop


inv_pad_crop
~~~~~~~~~~~~

.. autofunction:: inv_pad_crop


